WexGit/Wex_DX/force-app/main/default/objects/Field_Mapping_Parent__mdt/Field_Mapping_Parent__mdt.object-meta.xml
<CustomObject>
    <description>used for more dynamic field mapping. specifically created for Partner BOCA to Prospect, but should also be useful for other functionality. Parent is the parent (this will usually be the object api name)</description>
    <label>Field Mapping Parent</label>
    <pluralLabel>Field Mapping Parents</pluralLabel>
</CustomObject>