WexGit/Wex_DX/force-app/main/default/objects/Field_Mapping_Parent__mdt/fields/Destination_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Object_API_Name__c</fullName>
    <description>name of the object we are mapping to. this could be an api name or a class/inner class name</description>
    <label>Destination Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>