WexGit/Wex_DX/force-app/main/default/objects/Field_Mapping_Parent__mdt/fields/Disable_Object_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Disable_Object_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>delete an object mapping if it is no longer needed, but disable it if it is only temporarily not needed</description>
    <label>Disable Object Mapping</label>
    <type>Checkbox</type>
</CustomField>