WexGit/Wex_DX/force-app/main/default/objects/Field_Mapping_Parent__mdt/fields/Source_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_API_Name__c</fullName>
    <description>name of the object we are mapping from. this could be an api name or a class name. if there is an inner class, that should be specified in Source_Wrapper_Name__c</description>
    <label>Source Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>