WexGit/Wex_DX/force-app/main/default/objects/Field_Mapping_Parent__mdt/fields/Source_Wrapper_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Wrapper_Name__c</fullName>
    <description>name of the inner wrapper class we are mapping from</description>
    <label>Source Wrapper Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>